--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ jobs:
   fast_finish: true
   allow_failures:
     - python: nightly
+    - name: Lint, via Black
 
   include:
     - name: Lint, via Black
