--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install --upgrade black
   - pip install --upgrade beautifulsoup4
   - pip install --upgrade requests
-  - pip install --user codecov
+  - pip install --upgrade codecov
 #   - pip install --upgrade poetry
 #   - poetry install
 #   - poetry run python --version
