--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ dist: xenial   # required for Python >= 3.7
 os: linux
 language: python
 
+services: docker
+
 cache:
   - pip
 
@@ -11,6 +13,8 @@ git:
 
 before_install:
   - date
+  - docker pull debian:buster
+  - docker run debian:buster
 
 install:
   - pip install --upgrade black
