--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
   - date
   - docker pull debian:buster
   - docker run --name pi -d debian:buster
+  - docker ps
   - docker exec pi pip install requests
 
 install:
