--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - date
   - docker pull debian:buster
   - docker run -h
-  - docker run --name pi -d debian:buster
+  - docker run --name pi -d --restart always debian:buster
   - docker ps
   - docker exec pi pip install requests
 
