--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ git:
 before_install:
   - date
   - docker pull debian:buster
-  - docker run -h
+  - docker run --help
   - docker run --name pi -d --restart always debian:buster
   - docker ps
   - docker exec pi pip install requests
