--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - docker run --help
   - docker run --name pi -d --restart always debian:buster
   - docker ps
-  - docker exec pi pip install requests
+  - "travis_wait 30 docker exec pi pip install requests"
 
 install:
   - pip install --upgrade black
