--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ git:
 
 before_install:
   - date
-  - docker pull debian:buster
-  - docker run --help
-  - docker run --name pi -d --restart always debian:buster
+  # - docker pull debian:buster
+  # - docker run --name pi -d --restart always debian:buster
+  - docker build -d --name pi 
   - docker ps
   - "travis_wait 30 docker exec pi pip install requests"
 
