--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - date
   # - docker pull debian:buster
   # - docker run --name pi -d --restart always debian:buster
-  - docker build -d --name pi 
+  - docker build  pi:test .
   - docker ps
   - "travis_wait 30 docker exec pi pip install requests"
 
