--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
   - date
   # - docker pull debian:buster
   # - docker run --name pi -d --restart always debian:buster
+  - docker-compose up -d --build pi
+  - docker-compose ps
   - docker build --help
   - docker build  -t pi:test .
   - ls
