--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ git:
 before_install:
   - date
   - docker pull debian:buster
-  - docker run --name pi -d --restart always debian:buster
+#   - docker run --name pi -d --restart always debian:buster
+  - docker run --name pi -d debian:buster
   - docker start pi
 #   - docker-compose up -d --build pi
 #   - docker-compose ps
