--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - ls
   - pwd
   - docker ps
-  - docker exec pi pip install requests
+  - docker exec pi apt update
 
 install:
   - pip install --upgrade black
