--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_install:
   - pwd
   - docker ps
   - docker exec pi apt update
+  - docker exec pi apt install -y python3-pip python3-dev python3-setuptools python3-wheel
 
 install:
   - pip install --upgrade black
