--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   - docker ps
   - docker exec pi apt update
   - docker exec pi apt install -y python3-pip python3-dev python3-setuptools python3-wheel
-  - docker exec pi pip install --upgrade black beautifulsoup4 requests codecov coverage
+  - docker exec pi git clone git@github.com:HLNN/test.git
 
 install:
   - pip install --upgrade black
@@ -35,6 +35,7 @@ install:
   - pip install --upgrade requests
   - pip install --upgrade codecov
   - pip install --upgrade coverage
+  - docker exec pi python -m pip install --upgrade black beautifulsoup4 requests codecov coverage
 #   - pip install --upgrade poetry
 #   - poetry install
 #   - poetry run python --version
