--- a/.travis.yml
+++ b/.travis.yml
@@ -26,15 +26,15 @@ before_install:
   - pwd
   - docker ps
   - docker exec pi apt update
-  - docker exec pi apt install -y python3-pip python3-dev python3-setuptools python3-wheel git
+  - docker exec pi apt install -y python3 python3-pip python3-dev python3-setuptools python3-wheel git
   - docker exec pi git clone  --branch=master https://github.com/HLNN/test.git HLNN/test
+  - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
 install:
   - pip install --upgrade black
   - pip install --upgrade beautifulsoup4
   - pip install --upgrade requests
   - pip install --upgrade codecov
   - pip install --upgrade coverage
-  - docker exec pi python -m pip install --upgrade black beautifulsoup4 requests codecov coverage
 #   - pip install --upgrade poetry
 #   - poetry install
 #   - poetry run python --version
