--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
   - docker exec pi apt update
   - docker exec pi apt install -y python3 python3-pip python3-dev python3-setuptools python3-wheel git
   - docker exec pi git clone  --branch=master https://github.com/HLNN/test.git HLNN/test
-  - docker exec pi cd HLNN/test  
+  - docker exec pi /bin/bash cd HLNN/test  
   - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
 install:
   - pip install --upgrade black
