--- a/.travis.yml
+++ b/.travis.yml
@@ -32,17 +32,19 @@ before_install:
   - docker exec pi bash -c "cd HLNN/test"
   - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
 install:
-  - pip install --upgrade black
-  - pip install --upgrade beautifulsoup4
-  - pip install --upgrade requests
-  - pip install --upgrade codecov
-  - pip install --upgrade coverage
+  - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
+#   - pip install --upgrade black
+#   - pip install --upgrade beautifulsoup4
+#   - pip install --upgrade requests
+#   - pip install --upgrade codecov
+#   - pip install --upgrade coverage
 #   - pip install --upgrade poetry
 #   - poetry install
 #   - poetry run python --version
 
 script:
 #   - coverage run movie.py
+  - docker exec pi bash -c ls
   - docker exec pi coverage run movie.py
   
 after_success:
