--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,6 @@ before_install:
   - docker exec pi apt update
   - docker exec pi apt install -y python3 python3-pip python3-dev python3-setuptools python3-wheel git
   - docker exec pi git clone  --branch=master https://github.com/HLNN/test.git HLNN/test
-  - docker exec pi bash -c "pwd;cd HLNN/test;pwd"
   - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
 install:
   - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
@@ -45,8 +44,8 @@ install:
 
 script:
 #   - coverage run movie.py
-  - docker exec pi bash -c "ls;pwd"
-  - docker exec pi coverage run movie.py
+  - docker exec pi bash -c "cd HLNN/test;pwd;coverage run movie.py"
+#   - docker exec pi coverage run movie.py
   
 after_success:
 #   - pi codecov
