--- a/.travis.yml
+++ b/.travis.yml
@@ -44,12 +44,12 @@ install:
 
 script:
 #   - coverage run movie.py
-  - docker exec pi bash -c "cd HLNN/test;pwd;coverage run movie.py"
+  - docker exec pi bash -c "cd HLNN/test;pwd;coverage run movie.py;codecov"
 #   - docker exec pi coverage run movie.py
   
 after_success:
 #   - pi codecov
-  - docker exec pi codecov
+  - true
 
 aliases:
   test_mac: &test_mac
