--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,18 @@ before_install:
   - docker exec pi apt update
   - docker exec pi apt install -y python3 python3-pip python3-dev python3-setuptools python3-wheel git
   - docker exec pi git clone  --branch=master https://github.com/HLNN/test.git HLNN/test
-  - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
+  - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage python-opencv numpy serial matplotlib
+# import cv2
+# import re
+# import os
+# import urllib.request as requests
+# import time
+# import numpy
+# import threading
+# import random
+# import serial
+# import matplotlib.pyplot as plot
+
 install:
   - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage
 #   - pip install --upgrade black
