--- a/.travis.yml
+++ b/.travis.yml
@@ -90,75 +90,75 @@ aliases:
       - python -m pip install --upgrade pip
       - pip --version
 
-jobs:
-  fast_finish: true
-  allow_failures:
-    - python: nightly
-    - name: Lint, via Black
+# jobs:
+#   fast_finish: true
+#   allow_failures:
+#     - python: nightly
+#     - name: Lint, via Black
 
-  include:
-    - name: Lint, via Black
-      python: 3.8
-      script:
-        - black --version
-        - black --check . --verbose --diff
+#   include:
+#     - name: Lint, via Black
+#       python: 3.8
+#       script:
+#         - black --version
+#         - black --check . --verbose --diff
 
-    # Python 3.6 Tests
-    - name: Python 3.6 on Linux
-      python: 3.6
-    - <<: *test_mac
-      name: Python 3.6 on MacOS
-      python: 3.6
-      env:
-        - JRNL_PYTHON_VERSION=3.6.8
-    - <<: *test_windows
-      name: Python 3.6 on Windows
-      python: 3.6
-      env:
-        - JRNL_PYTHON_VERSION=3.6.8
-        - PATH=/c/Python36:/c/Python36/Scripts:$PATH
-        - PYTHONIOENCODING=UTF-8
+#     # Python 3.6 Tests
+#     - name: Python 3.6 on Linux
+#       python: 3.6
+#     - <<: *test_mac
+#       name: Python 3.6 on MacOS
+#       python: 3.6
+#       env:
+#         - JRNL_PYTHON_VERSION=3.6.8
+#     - <<: *test_windows
+#       name: Python 3.6 on Windows
+#       python: 3.6
+#       env:
+#         - JRNL_PYTHON_VERSION=3.6.8
+#         - PATH=/c/Python36:/c/Python36/Scripts:$PATH
+#         - PYTHONIOENCODING=UTF-8
 
-    # Python 3.7 Tests
-    - name: Python 3.7 on Linux
-      python: 3.7
-    - <<: *test_mac
-      name: Python 3.7 on MacOS
-      python: 3.7
-      env:
-        - JRNL_PYTHON_VERSION=3.7.5
-    - <<: *test_windows
-      name: Python 3.7 on Windows
-      python: 3.7
-      env:
-        - JRNL_PYTHON_VERSION=3.7.5
-        - PATH=/c/Python37:/c/Python37/Scripts:$PATH
-        - PYTHONIOENCODING=UTF-8
+#     # Python 3.7 Tests
+#     - name: Python 3.7 on Linux
+#       python: 3.7
+#     - <<: *test_mac
+#       name: Python 3.7 on MacOS
+#       python: 3.7
+#       env:
+#         - JRNL_PYTHON_VERSION=3.7.5
+#     - <<: *test_windows
+#       name: Python 3.7 on Windows
+#       python: 3.7
+#       env:
+#         - JRNL_PYTHON_VERSION=3.7.5
+#         - PATH=/c/Python37:/c/Python37/Scripts:$PATH
+#         - PYTHONIOENCODING=UTF-8
 
-    # Python 3.8 Tests
-    - name: Python 3.8 on Linux
-      python: 3.8
-    - <<: *test_mac
-      name: Python 3.8 on MacOS
-      python: 3.8
-      env:
-        - JRNL_PYTHON_VERSION=3.8.0
-    - <<: *test_windows
-      name: Python 3.8 on Windows
-      python: 3.8
-      env:
-        - JRNL_PYTHON_VERSION=3.8.0
-        - PATH=/c/Python38:/c/Python38/Scripts:$PATH
-        - PYTHONIOENCODING=UTF-8
+#     # Python 3.8 Tests
+#     - name: Python 3.8 on Linux
+#       python: 3.8
+#     - <<: *test_mac
+#       name: Python 3.8 on MacOS
+#       python: 3.8
+#       env:
+#         - JRNL_PYTHON_VERSION=3.8.0
+#     - <<: *test_windows
+#       name: Python 3.8 on Windows
+#       python: 3.8
+#       env:
+#         - JRNL_PYTHON_VERSION=3.8.0
+#         - PATH=/c/Python38:/c/Python38/Scripts:$PATH
+#         - PYTHONIOENCODING=UTF-8
 
-    # ... and beyond!
-    - name: Python nightly on Linux
-      python: nightly
+#     # ... and beyond!
+#     - name: Python nightly on Linux
+#       python: nightly
 
-    # Specialty tests
-    - name: Python 3.7 on Linux, not UTC
-      python: 3.7
-      env:
-        - TZ=America/Edmonton
+#     # Specialty tests
+#     - name: Python 3.7 on Linux, not UTC
+#       python: 3.7
+#       env:
+#         - TZ=America/Edmonton
 
    
