--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   - docker ps
   - docker exec --help
   - docker exec pi apt update
-  - docker exec pi apt install -y python3 python3-pip python3-dev python3-setuptools python3-wheel git
+  - docker exec pi apt install -y python3 python3-pip python3-dev python3-setuptools python3-wheel git libsm6
   - docker exec pi git clone  --branch=master https://github.com/HLNN/test.git HLNN/test
   - docker exec pi python3 -m pip install --upgrade black beautifulsoup4 requests codecov coverage opencv-python numpy serial matplotlib
 # import cv2
