--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
   - ls
   - pwd
   - docker ps
+  - docker run --help
   - docker exec --help
   - docker exec pi apt update
   - docker exec pi apt install -y python3 python3-pip python3-dev python3-setuptools python3-wheel git libsm6 libxrender1
