docker build -t pi:test .

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - docker build --help
   - docker run --help
   - docker exec --help
-  - docker build -t pi -
+  - docker build -t pi:test .
   - XSOCK=/tmp/.X11-unix
   - XAUTH=/tmp/.docker.xauth
   - xauth nlist :0 | sed -e 's/^..../ffff/' | xauth -f $XAUTH nmerge -
