--- a/.travis.yml
+++ b/.travis.yml
@@ -20,19 +20,21 @@ before_install:
 #  - docker-compose ps
 #  - docker build --help
 #  - docker build  -t pi:test .
+
   - docker build --help
   - docker run --help
   - docker exec --help
-  - docker build -t pi:test .
-  - XSOCK=/tmp/.X11-unix
-  - XAUTH=/tmp/.docker.xauth
-  - xauth nlist :0 | sed -e 's/^..../ffff/' | xauth -f $XAUTH nmerge -
-  - docker run -ti -v $XSOCK:$XSOCK -v $XAUTH:$XAUTH -e XAUTHORITY=$XAUTH pi:test
 
-#  - docker pull debian:buster
-#  - docker run --name pi -d -t debian:buster
-#  - docker ps
-#  - docker start pi
+#  - docker build -t pi:test .
+#  - XSOCK=/tmp/.X11-unix
+#  - XAUTH=/tmp/.docker.xauth
+#  - xauth nlist :0 | sed -e 's/^..../ffff/' | xauth -f $XAUTH nmerge -
+#  - docker run -ti -v $XSOCK:$XSOCK -v $XAUTH:$XAUTH -e XAUTHORITY=$XAUTH pi:test
+
+  - docker pull debian:buster
+  - docker run --name pi -d -t debian:buster
+  - docker ps
+  - docker start pi
 
   - ls
   - pwd
